--- a/main.html
+++ b/main.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
+<link href="css/style.css" rel="stylesheet">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <html>
 <head>
 	<title>Cadastro de Personagem</title>
 </head>
 <body>
-	<p></p>
+	<div id=formulario>
+		<form action="/pagina-processa-dados-do-form" method="post">
+    <div>
+        <label for="name">Nome:</label>
+        <input type="text" id="name" />
+    </div>
+    <div>
+        <label for="mail">E-mail:</label>
+        <input type="email" id="mail" />
+    </div>
+    <div>
+        <label for="msg">Mensagem:</label>
+        <textarea id="msg"></textarea>
+    </div>
+    <div class="button">
+        <button type="submit">Enviar sua mensagem</button>
+    </div>
+</form>
+	</div>
 </body>
 </html>
