--- a/main.html
+++ b/main.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <link href="css/style.css" rel="stylesheet">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -6,24 +7,27 @@
 	<title>Cadastro de Personagem</title>
 </head>
 <body>
-	<div id=formulario>
-		<form action="/pagina-processa-dados-do-form" method="post">
-    <div>
-        <label for="name">Nome:</label>
-        <input type="text" id="name" />
-    </div>
-    <div>
-        <label for="mail">E-mail:</label>
-        <input type="email" id="mail" />
-    </div>
-    <div>
-        <label for="msg">Mensagem:</label>
-        <textarea id="msg"></textarea>
-    </div>
-    <div class="button">
-        <button type="submit">Enviar sua mensagem</button>
-    </div>
-</form>
-	</div>
+	<div>
+  <form action="action_page.php">
+    <label for="fname">Nickname</label>
+    <input type="text" id="fname" name="firstname">
+
+    <label for="raca">Raça</label>
+    <select id="raca" name="country">
+      <option value="humano">Humano</option>
+      <option value="orc">Orc</option>
+      <option value="usa">Vampiro</option>
+    </select>
+
+    <label for="classe">Classe</label>
+    <select id="classe" name="country">
+      <option value="australia">Guerreiro</option>
+      <option value="canada">Mago</option>
+      <option value="usa">Paladino</option>
+    </select>
+  
+    <input type="submit" value="Enviar">
+  </form>
+</div>
 </body>
 </html>
