--- a/main.html
+++ b/main.html
@@ -1,14 +1,19 @@
 
 <!DOCTYPE html>
+
 <link href="css/style.css" rel="stylesheet">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<script src ="javaScript/banner.js" type="text/javascript"></script>
+
 <html>
 <head>
 	<title>Cadastro de Personagem</title>
 </head>
 <body>
+</div>
 	<div>
   <form action="action_page.php">
+    <img src="images/img-1.png" class="ribbon"/>
     <label for="fname">Nickname</label>
     <input type="text" id="fname" name="firstname">
 
