--- a/main.html
+++ b/main.html
@@ -4,6 +4,8 @@
 <link href="css/style.css" rel="stylesheet">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <script src ="javaScript/banner.js" type="text/javascript"></script>
+<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="http://malsup.github.io/jquery.cycle.all.js"></script>
 
 <html>
 <head>
