--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 <body>
 </div>
 	<div>
-  <form action="action_page.php">
+  <form>
     <img src="images/img-1.png" class="ribbon"/>
     <label for="fname">Nickname</label>
     <input type="text" id="fname" name="firstname">
