--- a/main.html
+++ b/main.html
@@ -28,9 +28,9 @@
 
     <label for="classe">Classe</label>
     <select id="classe" name="country">
-      <option value="australia">Guerreiro</option>
-      <option value="canada">Mago</option>
-      <option value="usa">Paladino</option>
+      <option value="guerreiro">Guerreiro</option>
+      <option value="mago">Mago</option>
+      <option value="paladino">Paladino</option>
     </select>
   
     <input type="submit" value="Enviar">
