--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 </div>
 	<div>
   <form>
-    <img src="images/img-1.png" class="ribbon"/>
+    <img src="img/img-1.png" class="ribbon"/>
     <label for="fname">Nickname</label>
     <input type="text" id="fname" name="firstname">
 
